file-operations: Rename and change the return type of a function

The function format_time does not clearly tell anything about
the fact that it is supposed to return something. And also it's
return type is char *. So, to make it consistent it's return
type is changed to gchar *.

This patch renames format_time to get_formatted_time.

https://bugzilla.gnome.org/show_bug.cgi?id=775091